# Media

./: README.md
app/: build.gradle.kts
app/src/androidTest/java/com/guanshu/media/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  media.cpp
app/src/main/cpp/src/: EglCore.cpp  EglCore.h  EglCoreJNI.cpp  Entity.cpp  Entity.h  ReadFrameUtils.cpp  Stringable.h  Utils.cpp  Utils.h  hellocpp.cpp  media.cpp
app/src/main/cpp/src/player/: AudioDecoder.cpp  AudioDecoder.h  AudioRenderer.h  Decoder.h  FFMpegPlayer.cpp  FFMpegPlayer.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/java/com/guanshu/media/: Camera2GlSurfaceActivity.kt  Camera2SurfaceActivity.kt  CameraAndPlaybackGlSurface2Activity.kt  CameraAndPlaybackGlSurfaceActivity.kt  Cube3dActivity.kt  FfmpegPlayerActivity.kt  MainActivity.kt  PlaybackCustomGlSurfaceActivity.kt  PlaybackCustomGlTextureActivity.kt  PlaybackGlSurfaceActivity.kt  PlaybackImageActivity.kt  PlaybackSharedEglActivity.kt
app/src/main/java/com/guanshu/media/application/: MediaApplication.kt
app/src/main/java/com/guanshu/media/camera/: Camera2.kt
app/src/main/java/com/guanshu/media/imageplayback/: ImagePlayer.kt
app/src/main/java/com/guanshu/media/opengl/: MatrixExtensions.kt  OpenGlExtensions.kt  PerfLogger.kt  Programs.kt  Renderer.kt  RendererV2.kt  TextureRenderer.kt
app/src/main/java/com/guanshu/media/opengl/abstraction/: ElementBuffer.kt  FrameBuffer.kt  Program.kt  Texture.kt  VertexArrayObject.kt  VertexBuffer.kt
app/src/main/java/com/guanshu/media/opengl/egl/: EglManager.kt  EglManagerInterface.kt  EglManagerNative.kt  OpenglEnv.kt
app/src/main/java/com/guanshu/media/opengl/filters/: BaseFilter.kt  FilterConstants.kt  FlattenFilter.kt  FlattenWithImageFilter.kt  OverlayFilter.kt  RenderGraph.kt  RenderPass.kt  SimpleImageTextureFilter.kt  SingleTextureFboFilter.kt  SingleTextureFilter.kt  SmartTextureFilter.kt  TextureWithImageFilter.kt  TwoOesTextureFilter.kt  TwoOesTextureFilter2.kt  TwoOesTextureMixFilter.kt
app/src/main/java/com/guanshu/media/opengl/program/: DefaultProgram.kt  ExternalTextureProgram.kt  SmartTextureProgram.kt  Texture2dProgram.kt
app/src/main/java/com/guanshu/media/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/guanshu/media/utils/: File.kt  HandlerExtensions.kt  Logger.kt  ResolutionUtils.kt
app/src/main/java/com/guanshu/media/view/: AdvancedOpenglSurfaceView.kt  Camera2GlSurfaceView.kt  Camera2SurfaceView.kt  Cube3DGlSurfaceView.kt  OpenglSurfaceView.kt  OpenglTextureView.kt  RenderingMode.kt  SingleSourceGlSurfaceView.kt  TwoSourceGlSurfaceView.kt
app/src/main/res/layout/: activity_camera_playback_to_glsurface.xml  activity_camera_playback_to_glsurface2.xml  activity_camera_to_glsurface.xml  activity_camera_to_surface.xml  activity_cube_3d.xml  activity_ffmpeg_player.xml  activity_main.xml  activity_playback_image.xml  activity_playback_to_custom_glsurface.xml  activity_playback_to_custom_gltexture.xml  activity_playback_to_custom_shared_glsurface.xml  activity_playback_to_glsurface.xml  activty_camera_to_surface.xml
app/src/test/java/com/guanshu/media/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
